force-app/main/default/objects/Lead/fields/Lead_statu_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_statu_2__c</fullName>
    <formula>IF( ISPICKVAL(Status , &quot;Delete&quot; ), &quot;&quot; , 
IF( ISPICKVAL(Status , &quot;0-Dead-No Potential&quot; ), &quot;0-Dead-No Potential&quot; , 
IF( ISPICKVAL(Status , &quot;1-Identify&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;2-Qualify&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;3-Relate&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;4-Discover&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;5-Advocate&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;6-Negotiate&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;7-Support&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;8-Improve&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;Contacted&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;Manager Reviewed&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;Open&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;Qualified&quot; ), &quot;All others except Delete&quot; , 
IF( ISPICKVAL(Status , &quot;Unqualified&quot; ), &quot;All others except Delete&quot; , 
&quot;&quot;)))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead status 2</label>
    <type>Text</type>
</CustomField>