force-app/main/default/objects/Lead/fields/LeadsCounter__c.field-meta.xml
<CustomField>
    <fullName>LeadsCounter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads Counter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>