force-app/main/default/objects/Lead/fields/LocationType__c.field-meta.xml
<CustomField>
    <fullName>LocationType__c</fullName>
    <description>8/9/18 - Confirmed with Julie Sherar, this field is fed from Marketing Insights and needs to remain in place.</description>
    <label>Location Type1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>