force-app/main/default/objects/Lead/fields/MarketingDetailsfromLead__c.field-meta.xml
<CustomField>
    <fullName>MarketingDetailsfromLead__c</fullName>
    <description>Intentionally duplicating information from the Marketing Description field (via Workflow rule/Field Update - &quot;Copy_Marketing_Desc_to_Opp_Marketing_De&quot;) so that when a Lead is converted, this field is mapped to Opp and Marketing Description is mapped to Contact.</description>
    <label>Marketing Details from Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>