force-app/main/default/objects/Lead/fields/mkto_utm_Campaign__c.field-meta.xml
<CustomField>
    <fullName>mkto_utm_Campaign__c</fullName>
    <label>utm campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>