force-app/main/default/objects/Lead/fields/mkto_utm_content__c.field-meta.xml
<CustomField>
    <fullName>mkto_utm_content__c</fullName>
    <label>utm content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>