force-app/main/default/objects/Lead/fields/mkto_utm_Medium__c.field-meta.xml
<CustomField>
    <fullName>mkto_utm_Medium__c</fullName>
    <label>utm medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>