force-app/main/default/objects/Lead/fields/mkto_utm_Source__c.field-meta.xml
<CustomField>
    <fullName>mkto_utm_Source__c</fullName>
    <label>utm source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>