force-app/main/default/objects/Lead/fields/NAICs__c.field-meta.xml
<CustomField>
    <fullName>NAICs__c</fullName>
    <inlineHelpText>NAICS  stands for North American Industry Classification System, a system used by business and government to classify business establishments according to economic activity. If the lead source is Market Insight (MI), the NAICS code will be pre-populated.</inlineHelpText>
    <label>NAICs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>