force-app/main/default/objects/Lead/fields/NAICsDescription__c.field-meta.xml
<CustomField>
    <fullName>NAICsDescription__c</fullName>
    <inlineHelpText>If the lead source is Market Insight (MI), the NAICS code will be pre-populated.</inlineHelpText>
    <label>NAICs Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>