force-app/main/default/objects/Lead/fields/Name_DIR__c.field-meta.xml
<CustomField>
    <fullName>Name_DIR__c</fullName>
    <formula>Owner:User.name_dir__c</formula>
    <label>Name - Level 3</label>
    <type>Text</type>
</CustomField>