force-app/main/default/objects/Lead/fields/Name_GM__c.field-meta.xml
<CustomField>
    <fullName>Name_GM__c</fullName>
    <formula>Owner:User.name_gsm__c</formula>
    <label>Name - Level 2</label>
    <type>Text</type>
</CustomField>