force-app/main/default/objects/Lead/fields/Name_RVP__c.field-meta.xml
<CustomField>
    <fullName>Name_RVP__c</fullName>
    <formula>Owner:User.name_vp__c</formula>
    <label>Name - Level 1</label>
    <type>Text</type>
</CustomField>