force-app/main/default/objects/Lead/fields/Name_SM__c.field-meta.xml
<CustomField>
    <fullName>Name_SM__c</fullName>
    <formula>Owner:User.name_zm_sm__c</formula>
    <label>Name - Level 3a</label>
    <type>Text</type>
</CustomField>