force-app/main/default/objects/Lead/fields/Name_SVP__c.field-meta.xml
<CustomField>
    <fullName>Name_SVP__c</fullName>
    <formula>Owner:User.name_pres__c</formula>
    <label>Name - Sales Leader</label>
    <type>Text</type>
</CustomField>