force-app/main/default/objects/Lead/fields/Network_ID__c.field-meta.xml
<CustomField>
    <fullName>Network_ID__c</fullName>
    <description>BW-2012
Related to the Genesis project for mobile sales reps</description>
    <label>Network ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>