force-app/main/default/objects/Lead/fields/Number_of_Employees_Location__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Location__c</fullName>
    <description>Copied via workflow from D&amp;B record</description>
    <inlineHelpText>Information provided by D&amp;B</inlineHelpText>
    <label>Number of Employees - Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>