force-app/main/default/objects/Lead/fields/Open_Activities_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Activities_Count__c</fullName>
    <label>Open Activities Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>