force-app/main/default/objects/Lead/fields/Opportunity_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Details__c</fullName>
    <label>Opportunity Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>