force-app/main/default/objects/Lead/fields/Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Owned_By__c</fullName>
    <description>First name and last name of the owner for display on the account/lead search visualforce page</description>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName &amp;&quot; &quot;&amp;     Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned By</label>
    <type>Text</type>
</CustomField>