force-app/main/default/objects/Lead/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <description>Text value of the owner manager to display on the Account/Lead visibility page</description>
    <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Manager of the Lead owner</inlineHelpText>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>