force-app/main/default/objects/Lead/fields/ParentDunsNumber__c.field-meta.xml
<CustomField>
    <fullName>ParentDunsNumber__c</fullName>
    <label>Parent Duns Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>