force-app/main/default/objects/Lead/fields/PKG_Gen_Interest_Mktg__c.field-meta.xml
<CustomField>
    <fullName>PKG_Gen_Interest_Mktg__c</fullName>
    <description>Packaging General Interest - Marketing.</description>
    <label>PKG Gen Interest Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>