force-app/main/default/objects/Lead/fields/PostalCodeInitial__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeInitial__c</fullName>
    <label>PostalCodeInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>