force-app/main/default/objects/Lead/fields/Remove_DnB_Data__c.field-meta.xml
<CustomField>
    <fullName>Remove_DnB_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove D&amp;B Data</label>
    <type>Checkbox</type>
</CustomField>