force-app/main/default/objects/Lead/fields/Reported_D_B_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reported_D_B_Rating__c</fullName>
    <inlineHelpText>If the lead has been pushed from the market intelligence team, will list the reported Dun &amp; Bradstreet rating.</inlineHelpText>
    <label>Reported D&amp;B Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>