force-app/main/default/objects/Lead/fields/Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Date__c</fullName>
    <description>Required when a lead is moved to Revisit. A process builder will automatically create a task to follow up 7 days before the revisit date.</description>
    <label>Revisit Date</label>
    <type>Date</type>
</CustomField>