force-app/main/default/objects/Lead/fields/Revisit_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Task_Due_Date__c</fullName>
    <description>This field is needed because of the requirement to include the name of the lead in the revisit task. Adding this field on the lead significantly reduces the complexity in setting the reminder to occur on the due date since we have to formulaic-ally assign the due date.</description>
    <formula>Revisit_Date__c -7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is for backend automation.</inlineHelpText>
    <label>Revisit Task Due Date</label>
    <type>Date</type>
</CustomField>