force-app/main/default/objects/Lead/fields/Running_User_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Lightning__c</fullName>
    <description>This field required based on limitations of process builder looking to the $User or to the user object through Last Modified By. Needed for the revisit task creation process builder to limit to lightning users only.</description>
    <formula>$User.Lightning_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE = If the running user is a lightning user.</inlineHelpText>
    <label>Running User Lightning</label>
    <type>Checkbox</type>
</CustomField>