force-app/main/default/objects/Lead/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <description>Passed from the service technician form</description>
    <inlineHelpText>Free text field sent from the technician form from formassembly</inlineHelpText>
    <label>Sales Manager</label>
    <length>45</length>
    <type>Text</type>
</CustomField>