force-app/main/default/objects/Lead/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>Lead field to replicate the Enrollment object functionality for easier sync with Marketo</description>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>