force-app/main/default/objects/Lead/fields/Sender_First__c.field-meta.xml
<CustomField>
    <fullName>Sender_First__c</fullName>
    <description>Lead field to replicate the Enrollment object functionality for easier sync with Marketo</description>
    <label>Sender First</label>
    <length>40</length>
    <type>Text</type>
</CustomField>