force-app/main/default/objects/Lead/fields/SIC__c.field-meta.xml
<CustomField>
    <fullName>SIC__c</fullName>
    <inlineHelpText>SIC stands for Standard Industrial Classification, a four-digit code used by government agencies to classify industry areas. If the lead source is Market Insight (MI), the SIC code will be pre-populated.</inlineHelpText>
    <label>SIC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>