force-app/main/default/objects/Lead/fields/SICDescription__c.field-meta.xml
<CustomField>
    <fullName>SICDescription__c</fullName>
    <inlineHelpText>If the lead source is Market Insight (MI), the SIC description  will be pre-populated.</inlineHelpText>
    <label>SIC Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>