force-app/main/default/objects/Lead/fields/StateInitial__c.field-meta.xml
<CustomField>
    <fullName>StateInitial__c</fullName>
    <label>StateInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>