force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Because the Lead Status used to stay as 2- Working even after conversion, use this field to truly distinquish active and converted.</description>
    <formula>IF (IsConverted = True , &quot;Converted&quot;, TEXT(Status)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>