force-app/main/default/objects/Lead/fields/Status_act_vs_dead_vs_conv__c.field-meta.xml
<CustomField>
    <fullName>Status_act_vs_dead_vs_conv__c</fullName>
    <formula>IF( Converted_Status__c = &quot;Converted&quot;, &quot;Converted&quot;, 
IF (ISPICKVAL(Status, &quot;0_Dead&quot;),&quot;Dead&quot;, &quot;Active&quot;  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status -act vs dead vs conv</label>
    <type>Text</type>
</CustomField>