force-app/main/default/objects/Lead/fields/StreetInitial__c.field-meta.xml
<CustomField>
    <fullName>StreetInitial__c</fullName>
    <label>StreetInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>