force-app/main/default/objects/Lead/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>being used by Inside Sales and Marketing to track which team it finally landed with. Insides Sales will select the proper team when they distribute it out</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Outside Sales</fullName>
            </value>
            <value>
                <fullName>Veritiv Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>