force-app/main/default/objects/Lead/fields/Technician_Email__c.field-meta.xml
<CustomField>
    <fullName>Technician_Email__c</fullName>
    <description>Email address for the Service Technician Leads.  ability to copy the technician on the notification emails.</description>
    <label>Technician Email</label>
    <type>Email</type>
</CustomField>