force-app/main/default/objects/Lead/fields/Technician_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Technician_Employee_Number__c</fullName>
    <description>Populated via FormAssembly. RegEx to be 6 digits all numbers.</description>
    <inlineHelpText>Entered by technicians during form submission</inlineHelpText>
    <label>Technician Employee Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>