force-app/main/default/objects/Lead/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <description>Name of Technician who submitted this lead</description>
    <inlineHelpText>First and Last name submitted from the formassembly form</inlineHelpText>
    <label>Technician Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>