force-app/main/default/objects/Lead/fields/Temp_Field__c.field-meta.xml
<CustomField>
    <fullName>Temp_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for marketo sync - update it to checked on ALL leads and it will trigger a sync of every record to marketo</description>
    <label>Temp Field</label>
    <type>Checkbox</type>
</CustomField>