force-app/main/default/objects/Lead/fields/Temp_Filed_text__c.field-meta.xml
<CustomField>
    <fullName>Temp_Filed_text__c</fullName>
    <description>use this field to make an update to all leads to get them to re-sync to Marketo</description>
    <label>Temp Field Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>