force-app/main/default/objects/Lead/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern (EST)</fullName>
            </value>
            <value>
                <fullName>Central (CST)</fullName>
            </value>
            <value>
                <fullName>Mountain (MST)</fullName>
            </value>
            <value>
                <fullName>Pacific (PST)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>