force-app/main/default/objects/Lead/fields/TotalEmployeesOnsite__c.field-meta.xml
<CustomField>
    <fullName>TotalEmployeesOnsite__c</fullName>
    <label>Total Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>