force-app/main/default/objects/Lead/fields/Tradestyle__c.field-meta.xml
<CustomField>
    <fullName>Tradestyle__c</fullName>
    <label>Tradestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>