force-app/main/default/objects/Lead/fields/Untouched_Lead__c.field-meta.xml
<CustomField>
    <fullName>Untouched_Lead__c</fullName>
    <description>LastModifiedDate = CreatedDate and in an open Lead Status</description>
    <formula>AND(
LastModifiedDate = CreatedDate,
NOT(ISPICKVAL( Status, &quot;0-Dead&quot;)),
NOT(ISPICKVAL( Status, &quot;Converted&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Untouched Lead</label>
    <type>Checkbox</type>
</CustomField>