force-app/main/default/objects/Lead/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Limit vertical to 30 characters only

Any additions/deletions here should also be done on Account Vertical on Account object</description>
    <inlineHelpText>The potential customer&apos;s vertical, not the vertical that Veritiv is selling. The Account Vertical is required in order to provide relevant marketing content.</inlineHelpText>
    <label>Lead Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ent and Hosp - Food</fullName>
            </value>
            <value>
                <fullName>Ent and Hosp - High Traffic</fullName>
            </value>
            <value>
                <fullName>Ent and Hosp - Lodging</fullName>
            </value>
            <value>
                <fullName>Food - Bakery &amp; Snack</fullName>
            </value>
            <value>
                <fullName>Food - Beverage</fullName>
            </value>
            <value>
                <fullName>Food - Candy</fullName>
            </value>
            <value>
                <fullName>Food - Cannabis</fullName>
            </value>
            <value>
                <fullName>Food - Cereal &amp; Grain</fullName>
            </value>
            <value>
                <fullName>Food - Dairy</fullName>
            </value>
            <value>
                <fullName>Food - Farming</fullName>
            </value>
            <value>
                <fullName>Food - Meat</fullName>
            </value>
            <value>
                <fullName>Food - Other</fullName>
            </value>
            <value>
                <fullName>Food - Perishable Prepared</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Logistics</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Online Retail</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Other</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Retail</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Wholesale</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Government - Higher Ed</fullName>
            </value>
            <value>
                <fullName>Government - K - 12</fullName>
            </value>
            <value>
                <fullName>Graphic Design/Advertising</fullName>
            </value>
            <value>
                <fullName>Mfg - Aerospace</fullName>
            </value>
            <value>
                <fullName>Mfg - Apparel</fullName>
            </value>
            <value>
                <fullName>Mfg - Appliances</fullName>
            </value>
            <value>
                <fullName>Mfg - Automotive &amp; Heavy Eqt</fullName>
            </value>
            <value>
                <fullName>Mfg - Building Materials</fullName>
            </value>
            <value>
                <fullName>Mfg - Computers &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>Mfg - Fabricated Metals</fullName>
            </value>
            <value>
                <fullName>Mfg - Furniture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>