force-app/main/default/objects/Lead/fields/Vertical_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Grouping__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical_Group</valueSetName>
    </valueSet>
</CustomField>