force-app/main/default/objects/Lead/fields/Vertical_Page__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical_Page</label>
    <referenceTo>Verticals__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>