force-app/main/default/objects/Lead/fields/Verticals__c.field-meta.xml
<CustomField>
    <fullName>Verticals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Vertical object - zzed as we&apos;ve hidden that object from users</description>
    <label>zzVertical</label>
    <referenceTo>Verticals__c</referenceTo>
    <relationshipLabel>Leads (Vertical)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>