force-app/main/default/objects/Lead/fields/Woman_Owned__c.field-meta.xml
<CustomField>
    <fullName>Woman_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Woman Owned</label>
    <type>Checkbox</type>
</CustomField>