force-app/main/default/objects/Lead/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>