force-app/main/default/objects/Lead/fields/Zombie_Lead__c.field-meta.xml
<CustomField>
    <fullName>Zombie_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkmark in this field means the lead has come back from Dead. It will remain blank until Marketo marks it as true if a dead lead comes back. Anytime something goes dead, we&apos;ll Uncheck the box in case it was checked by Marketo earlier.</description>
    <label>Zombie Lead</label>
    <type>Checkbox</type>
</CustomField>