force-app/main/default/objects/Lead/recordTypes/Graphic_Communications_Lead_Process.recordType-meta.xml
<RecordType>
    <fullName>Graphic_Communications_Lead_Process</fullName>
    <active>false</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>Lead Process for GC</description>
    <label>Graphic Communications - Lead Process</label>
</RecordType>