force-app/main/default/objects/Lead/recordTypes/Standard_Lead_Process.recordType-meta.xml
<RecordType>
    <fullName>Standard_Lead_Process</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <label>Standard Lead Process</label>
</RecordType>