force-app/main/default/objects/Lead/validationRules/Canada_requires_First_Nm_Province_Countr.validationRule-meta.xml
<ValidationRule>
    <fullName>Canada_requires_First_Nm_Province_Countr</fullName>
    <active>false</active>
    <description>If user is in a canadian profile, require them to enter First Name, Province, Country.</description>
    <errorConditionFormula>AND(
(OR(
$User.Profile_Display__c = &quot;CAN - Manager&quot;,
$User.Profile_Display__c = &quot;CAN - Sales Rep&quot;,
$User.Profile_Display__c = &quot;CAN - CS&quot;,
$User.Profile_Display__c = &quot;CAN - CS and Sourcing&quot;)),
( OR(
FirstName  = null,
State  = null,
Country  = null)))</errorConditionFormula>
    <errorMessage>You must enter First Name, State/Province and Country to continue.  Please use Canada or United States for country.</errorMessage>
</ValidationRule>