force-app/main/default/objects/Lead/validationRules/Cannot_Change_Lead_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Lead_Source</fullName>
    <active>true</active>
    <description>Implemented at Marketing&apos;s request because changing Lead Source causes issues in Marketo</description>
    <errorConditionFormula>AND(
ISCHANGED(  LeadSource ) ,  
PRIORVALUE( LeadSource ) &lt;&gt;  Null, 
$User.Profile_Display__c &lt;&gt; &quot;System Administrator&quot;,
$User.Profile_Display__c &lt;&gt; &quot;Marketo Sync&quot;
)</errorConditionFormula>
    <errorMessage>You cannot change Lead Source once it has been selected.</errorMessage>
</ValidationRule>